修复api-key的错误

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-OPENAI_API_KEY="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"
+MODEL_NAME="gpt-3.5-turbo"
+OPENAI_API_KEY="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"
