--- a/package.json
+++ b/package.json
@@ -53,6 +53,9 @@
     "tsconfig-paths": "4.2.0",
     "typescript": "^4.7.4"
   },
+  "engines": {
+    "node": ">=18"
+  },
   "jest": {
     "moduleFileExtensions": [
       "js",
@@ -69,5 +72,13 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
-  }
+  },
+  "keywords": [
+    "starter",
+    "gpt4",
+    "typescript",
+    "nestjs",
+    "langchain",
+    "openai"
+  ]
 }
